@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: iTermController.h,v 1.26 2007-01-23 04:46:14 yfabian Exp $
+// $Id: iTermController.h,v 1.27 2008-09-13 00:07:22 delx Exp $
 /*
  **  iTermController.h
  **
@@ -40,9 +40,6 @@
     NSMutableArray *terminalWindows;
     id FRONT;
 	ItermGrowlDelegate *gd;
-
-	// Full screen  mode
-	PseudoTerminal *_fullScreenTerminal;
 }
 
 + (iTermController*)sharedInstance;
@@ -63,10 +60,6 @@
 - (void) launchBookmark: (NSDictionary *) bookmarkData inTerminal: (PseudoTerminal *) theTerm withCommand: (NSString *)command;
 - (void) launchBookmark: (NSDictionary *) bookmarkData inTerminal: (PseudoTerminal *) theTerm withURL: (NSString *)url;
 - (PTYTextView *) frontTextView;
-
-// full screen support
-- (PseudoTerminal *) fullScreenTerminal;
-- (void) setFullScreenTerminal:(PseudoTerminal *)terminal;
 
 @end
 
