@@ -66,8 +66,7 @@ static BOOL onScreen = NO;
     [singleInstance loadConfigWindow: nil];
 	
 	[[singleInstance window] setFrameAutosaveName: @"Config Panel"];
-	if ([[iTermController sharedInstance] fullScreenTerminal]) [[singleInstance window] setLevel:CGShieldingWindowLevel()];
-	else [[singleInstance window] setLevel:NSFloatingWindowLevel];
+	[[singleInstance window] setLevel:NSFloatingWindowLevel];
 	[[singleInstance window] makeKeyAndOrderFront: self];
     onScreen = YES;
 }
