@@ -8,6 +8,7 @@
     * Check if locale exists before setting LANG environment variables (#2102884)
     * ISO8859-* and eucXX encodings will get correct environment variables
     * Keep menubar when setting full screen mode in a secondary screen (#2090939)
+    * Multiple windows can now be in full screen mode, over different spaces and monitors
     
 
 2008-09-11  fabian
